--- a/Projects/GameCommon/GameCommon.vcxproj
+++ b/Projects/GameCommon/GameCommon.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="GamePacketBase.h" />
     <ClInclude Include="GamePacketReader.h" />
     <ClInclude Include="GamePacketProtocol.h" />
+    <ClInclude Include="LocalPlayer.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="StaticObject.h" />
@@ -184,6 +185,7 @@
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="GamePacketReader.cpp" />
     <ClCompile Include="GamePacketReader_Processing.cpp" />
+    <ClCompile Include="LocalPlayer.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
