--- a/Projects/GameCommon/GameCommon.vcxproj
+++ b/Projects/GameCommon/GameCommon.vcxproj
@@ -166,6 +166,7 @@
   <ItemGroup>
     <ClInclude Include="Actor.h" />
     <ClInclude Include="BreakableObject.h" />
+    <ClInclude Include="GameClient.h" />
     <ClInclude Include="GameCommon.h" />
     <ClInclude Include="GameNetworker.h" />
     <ClInclude Include="GameObject.h" />
@@ -185,6 +186,7 @@
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="BreakableObject.cpp" />
+    <ClCompile Include="GameClient.cpp" />
     <ClCompile Include="GameCommon.cpp" />
     <ClCompile Include="GameNetworker.cpp" />
     <ClCompile Include="GameObject.cpp" />
