--- a/Projects/GameCommon/GameCommon.vcxproj.filters
+++ b/Projects/GameCommon/GameCommon.vcxproj.filters
@@ -1,109 +1,117 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="pch.cpp" />
-    <ClCompile Include="GameNetworker.cpp">
-      <Filter>Network</Filter>
-    </ClCompile>
-    <ClCompile Include="GameCommon.cpp" />
-    <ClCompile Include="Player.cpp">
-      <Filter>Player</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject.cpp">
-      <Filter>GameObj</Filter>
-    </ClCompile>
-    <ClCompile Include="Actor.cpp">
-      <Filter>GameObj</Filter>
-    </ClCompile>
-    <ClCompile Include="StaticObject.cpp">
-      <Filter>GameObj</Filter>
-    </ClCompile>
-    <ClCompile Include="BreakableObject.cpp">
-      <Filter>GameObj</Filter>
-    </ClCompile>
-    <ClCompile Include="Trigger.cpp">
-      <Filter>GameObj</Filter>
-    </ClCompile>
-    <ClCompile Include="Level.cpp">
-      <Filter>Level</Filter>
-    </ClCompile>
-    <ClCompile Include="GamePacketReader.cpp">
-      <Filter>Network</Filter>
-    </ClCompile>
-    <ClCompile Include="GamePacketReader_Processing.cpp">
-      <Filter>Network</Filter>
-    </ClCompile>
-    <ClCompile Include="LocalPlayer.cpp">
-      <Filter>Player</Filter>
-    </ClCompile>
-    <ClCompile Include="NetUser.cpp">
-      <Filter>Network</Filter>
-    </ClCompile>
-    <ClCompile Include="NetUserManager.cpp">
-      <Filter>Network</Filter>
-    </ClCompile>
-    <ClCompile Include="GameClient.cpp" />
+    <Filter Include="헤더 파일">
+      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
+    </Filter>
+    <Filter Include="리소스 파일">
+      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="Src">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="pch.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="GameNetworker.h">
-      <Filter>Network</Filter>
+    <ClInclude Include="pch.h" />
+    <ClInclude Include="BreakableObject.h">
+      <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="GameCommon.h" />
-    <ClInclude Include="Player.h">
-      <Filter>Player</Filter>
+    <ClInclude Include="GameClient.h">
+      <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject.h">
-      <Filter>GameObj</Filter>
+    <ClInclude Include="GameCommon.h">
+      <Filter>Src</Filter>
     </ClInclude>
     <ClInclude Include="Actor.h">
-      <Filter>GameObj</Filter>
-    </ClInclude>
-    <ClInclude Include="StaticObject.h">
-      <Filter>GameObj</Filter>
-    </ClInclude>
-    <ClInclude Include="BreakableObject.h">
-      <Filter>GameObj</Filter>
-    </ClInclude>
-    <ClInclude Include="Trigger.h">
-      <Filter>GameObj</Filter>
-    </ClInclude>
-    <ClInclude Include="Level.h">
-      <Filter>Level</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePacketBase.h">
-      <Filter>Network</Filter>
+      <Filter>Src</Filter>
     </ClInclude>
     <ClInclude Include="GamePacketProtocol.h">
-      <Filter>Network</Filter>
+      <Filter>Src</Filter>
     </ClInclude>
     <ClInclude Include="GamePacketReader.h">
-      <Filter>Network</Filter>
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Level.h">
+      <Filter>Src</Filter>
     </ClInclude>
     <ClInclude Include="LocalPlayer.h">
-      <Filter>Player</Filter>
+      <Filter>Src</Filter>
     </ClInclude>
     <ClInclude Include="NetUser.h">
-      <Filter>Network</Filter>
+      <Filter>Src</Filter>
     </ClInclude>
     <ClInclude Include="NetUserManager.h">
-      <Filter>Network</Filter>
+      <Filter>Src</Filter>
     </ClInclude>
-    <ClInclude Include="GameClient.h" />
+    <ClInclude Include="GameNetworker.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePacketBase.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticObject.h">
+      <Filter>Src</Filter>
+    </ClInclude>
+    <ClInclude Include="Trigger.h">
+      <Filter>Src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Network">
-      <UniqueIdentifier>{a70fd088-c457-4494-b83e-436dc9d96875}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Player">
-      <UniqueIdentifier>{d7bb171f-a979-4166-8eb5-704e4f9471cc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="GameObj">
-      <UniqueIdentifier>{83b6d87f-12b1-4d8b-af17-d6c36ffcfb6c}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Level">
-      <UniqueIdentifier>{dd4f9ef3-fe58-4c4e-a266-6b350e0303a7}</UniqueIdentifier>
-    </Filter>
+    <ClCompile Include="BreakableObject.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="GameClient.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="GameCommon.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Actor.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp" />
+    <ClCompile Include="GamePacketReader.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="GamePacketReader_Processing.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Level.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="LocalPlayer.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="NetUser.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="NetUserManager.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="GameNetworker.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="StaticObject.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Trigger.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
