--- a/Projects/Network/Network.vcxproj
+++ b/Projects/Network/Network.vcxproj
@@ -174,8 +174,8 @@ if exist Src\*.inl    xcopy /D /F /I /R /Y Src\*.inl    ..\..\Include\Network</C
     <ClCompile Include="Src\Listener.cpp" />
     <ClCompile Include="Src\Network.cpp" />
     <ClCompile Include="Src\NetWorker.cpp" />
-    <ClCompile Include="Src\Session.cpp" />
-    <ClCompile Include="Src\SessionBuffer.cpp" />
+    <ClCompile Include="Src\TCPSession.cpp" />
+    <ClCompile Include="Src\CircleBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PCH.h" />
@@ -183,8 +183,8 @@ if exist Src\*.inl    xcopy /D /F /I /R /Y Src\*.inl    ..\..\Include\Network</C
     <ClInclude Include="Src\Listener.h" />
     <ClInclude Include="Src\Network.h" />
     <ClInclude Include="Src\NetWorker.h" />
-    <ClInclude Include="Src\Session.h" />
-    <ClInclude Include="Src\SessionBuffer.h" />
+    <ClInclude Include="Src\TCPSession.h" />
+    <ClInclude Include="Src\CircleBuffer.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
